[package]
name = "terminal_timer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
clap = "4.5.1"
colored = "2.1.0"
crossterm = "0.27.0"
csv = "1.3.0"
dirs = "5.0.1"
term_size = "0.3.2"

